# gtk-colours

./: .anjuta_sym_db.db  .gitignore  Makefile  Makefile.in  MikeInstallReadme.sh  MikeInstallReadme.txt  MikeInstallReadme2.txt  README.md  config.h  configure  configure.ac  debug1.txt  debug2.txt  debug3.txt  myID.sh  pngCreate.sh  to_do.txt  treeColours.txt  treeColours2.txt  usage.txt
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  gtk-colours.txt  gtk_colours  gtk_colours.txt
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  gtk_colours.ui  main.c  main.c~
